--- a/src/Components/News/NewsCardSection.css
+++ b/src/Components/News/NewsCardSection.css
@@ -1,3 +1,3 @@
-git remote add origin https://github.com/INDHIRAJITH2000/reactwanderlust
+/* git remote add origin https://github.com/INDHIRAJITH2000/reactwanderlust
 git branch -M main
-git push -u origin main
+git push -u origin main */
